# Vision-Based-Hand-Gesture-Controlled-UGV

./: README.md  data_features.csv  feature_extraction.py  generate_dataset.py  models.py  train_test.py  vbh_dataset.csv
gesture_recogniton_ui/: detector.py
scripts/: pc_viewer_node.py
ugv_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ugv_control/scripts/: control_node.py
ugv_control/ugv_control/: control_node.py  ugv.py
ugv_vision/: #vis_nodes.py#  .#vis_nodes.py  CMakeLists.txt  package.xml  setup.py  vis_nodes.py
ugv_vision/scripts/: ugv_cam_node.py
ugv_vision/ugv_vision/: pc_viewer_node.py  ugv_cam_node.py  vis_nodes.py
ugv_vision/ugv_vision/vis_models/: models.py
uros_app/: app.c
